--- a/.github/workflows/merge-requets.yml
+++ b/.github/workflows/merge-requets.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [16, 18]
 
     steps:
       - uses: actions/checkout@v2
