--- a/.github/workflows/merge-request.yml
+++ b/.github/workflows/merge-request.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   ci:
     runs-on: ubuntu-latest
-      - uses: ./.github/actions/cache
+      - uses: .github/actions/cache
 
       - name: Lint
         run: |
