--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: .github/actions/cache
+      - uses: ./.github/actions/cache
 
       - name: Prepare and deploy
         env:
