--- a/.github/workflows/merge-request.yml
+++ b/.github/workflows/merge-request.yml
@@ -8,6 +8,8 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+
       - uses: ./.github/actions/cache
 
       - name: Lint
