--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/compiler-cli": "^15.0.0",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@types/gtag.js": "^0.0.12",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.44.0",
     "@typescript-eslint/parser": "5.44.0",
