--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,4 +19,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           npm install
-          npm run ng -- deploy --base-href=/pizza-dought/ --name="ArturBa" --email="pizzadoughtgenerator@gmail.com" --no-silent
+          npm run ng -- deploy --base-href=/pizza-dough/ --name="ArturBa" --email="pizzadoughgenerator@gmail.com" --no-silent
