refactor: :lipstick: set up a web mixin

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,5 @@
 {
   "*.{json,md}": "npx prettier --write .",
+  "*.{scss,html}": "npx prettier --write .",
   "src/**/*.ts": ["ng-lint-staged lint --fix --"]
 }
