--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@compodoc/compodoc": "^1.1.19",
-    "@storybook/addon-actions": "^6.5.14",
-    "@storybook/addon-essentials": "^6.5.14",
-    "@storybook/addon-interactions": "^6.5.14",
-    "@storybook/addon-links": "^6.5.14",
-    "@storybook/angular": "^6.5.14",
-    "@storybook/builder-webpack5": "^6.5.14",
-    "@storybook/manager-webpack5": "^6.5.14",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-actions": "^7.0.0-beta.8",
+    "@storybook/addon-essentials": "^7.0.0-beta.8",
+    "@storybook/addon-interactions": "^7.0.0-beta.8",
+    "@storybook/addon-links": "^7.0.0-beta.8",
+    "@storybook/angular": "^7.0.0-beta.8",
+    "@storybook/builder-webpack5": "^7.0.0-beta.8",
+    "@storybook/manager-webpack5": "^7.0.0-alpha.10",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "@types/gtag.js": "^0.0.12",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.44.0",
