--- a/.github/workflows/master-branch.yml
+++ b/.github/workflows/master-branch.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages via angular-cli-ghpages
+name: Deploy to GitHub Pages via angular-cli-ghpages and update Storybooks
 
 on:
   push:
@@ -20,3 +20,5 @@ jobs:
         run: |
           npm install
           npm run ng -- deploy --base-href=/pizza-dough/ --name="ArturBa" --email="pizzadoughgenerator@gmail.com" --no-silent
+
+      - uses: ./.github/actions/storybook
