--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@typescript-eslint/parser": "5.44.0",
     "angular-cli-ghpages": "^1.0.5",
     "babel-loader": "^8.3.0",
+    "chromatic": "^6.13.1",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
