--- a/.github/actions/storybook/action.yml
+++ b/.github/actions/storybook/action.yml
@@ -1,10 +1,17 @@
 name: 'Storybook'
 description: 'Update the chromatic page with new storybooks'
+inputs:
+  GITHUB_TOKEN:
+    required: true
+    description: "Github token"
+  CHROMATIC_TOKEN:
+    required: true
+    description: "Chromatic token"
 runs:
   using: 'composite'
   steps:
     - name: Storybook
       uses: chromaui/action@v1
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+        token: ${{ inputs.GITHUB_TOKEN }}
+        projectToken: ${{ inputs.CHROMATIC_TOKEN }}
