--- a/.github/workflows/master-branch.yml
+++ b/.github/workflows/master-branch.yml
@@ -11,6 +11,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # 👈 Required to retrieve git history (chromatic)
 
       - uses: ./.github/actions/cache
 
