--- a/.github/workflows/merge-request.yml
+++ b/.github/workflows/merge-request.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # 👈 Required to retrieve git history (chromatic)
 
       - uses: ./.github/actions/cache
 
