--- a/angular.json
+++ b/angular.json
@@ -110,14 +110,14 @@
         "storybook": {
           "builder": "@storybook/angular:start-storybook",
           "options": {
-            "browserTarget": "pizza-dough:build",
+            "browserTarget": "pizza-dough:build:development",
             "port": 6006
           }
         },
         "build-storybook": {
           "builder": "@storybook/angular:build-storybook",
           "options": {
-            "browserTarget": "pizza-dough:build"
+            "browserTarget": "pizza-dough:build:production"
           }
         }
       }
