feat: :sparkles: add storybook and input component  (#12)
* feat: :sparkles: add storybook and input component

* feat: :sparkles: add storybook and input component

* fix: storybook works with angular 15

* feat: add storybook to CI

* feat: add storybook to CI

* feat: add storybook to CI

* feat: add storybook to CI

* fix: storybook CI build

* feat: (storybook) update the background color

* feat: (storybook) update the background color

--- a/.github/workflows/merge-request.yml
+++ b/.github/workflows/merge-request.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # 👈 Required to retrieve git history (chromatic)
 
       - uses: ./.github/actions/cache
 
@@ -43,3 +45,8 @@ jobs:
       - name: Build
         run: |
           npm run build
+
+      - uses: ./.github/actions/storybook
+        with:
+          CHROMATIC_TOKEN: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
