--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
     "titleBar.inactiveBackground": "#d9c6b599",
     "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.color": "#d9c6b5"
+  "peacock.color": "#d9c6b5",
+  "conventionalCommits.scopes": ["component"]
 }
