--- a/.github/workflows/merge-request.yml
+++ b/.github/workflows/merge-request.yml
@@ -5,13 +5,10 @@ on:
     branches: [master]
 
 jobs:
-  ci:
+  analytic:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # 👈 Required to retrieve git history (chromatic)
-
       - uses: ./.github/actions/cache
 
       - name: Lint
@@ -42,9 +39,23 @@ jobs:
           recreate: true
           path: code-coverage-results.md
 
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/cache
       - name: Build
         run: |
           npm run build
+
+  storybook:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # 👈 Required to retrieve git history (chromatic)
+
+      - uses: ./.github/actions/cache
 
       - uses: ./.github/actions/storybook
         with:
