--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,5 +1,8 @@
 {
-  "*.{json,md,yml,yaml}": "npx prettier --write .",
-  "*.{scss,html}": "npx prettier --write .",
+  "src/assets/data/recipes/*.json": [
+    "./script/update-recipe-list.sh; git add src/assets/data"
+  ],
+  "*.{json,md,yml,yaml}": "npx prettier --write",
+  "*.{scss,html}": "npx prettier --write",
   "src/**/*.ts": ["ng-lint-staged lint --fix --"]
 }
